--- a/jio-cinema-clone/src/App.css
+++ b/jio-cinema-clone/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: JioFontLight;
+  src: url(https://www.jiocinema.com/css/fonts/jiotype/JioTypeW04-Light.woff2);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: JioFontMedium;
+  src: url(https://www.jiocinema.com/css/fonts/jiotype/JioTypeW04-Medium.woff2);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root {
+  background-color: black;
+  font-family: JioFontMedium, sans-serif; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-brand {
+  padding-bottom: 0px !important;
 }
 
-.App-link {
-  color: #61dafb;
+ .website-name a {
+  font-family: JioFontMedium, sans-serif; 
+  font-size: 28px;
+  font-weight: 500;
+  text-decoration: none;
+  color: #ffffff;
+  margin-left: 30px;
+  margin-top: 20px;
+ }
+
+ .website-name a:hover {
+  font-family: JioFontMedium, sans-serif; 
+  font-size: 28px;
+  font-weight: 500;
+  text-decoration: none;
+  color: #ffffff;
+  margin-left: 30px;
+  margin-top: 20px;
+ }
+
+ .hamburger-icon{
+   font-size: 28px;
+   color: #ffffff;
+   font-weight: 500;
+ }
+
+.menu-user-icon{
+  font-size: 25px;
+  color: #ffffff;
+  font-weight: 500;
+  margin-left: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu-search-icon{
+  font-size: 20px;
+  color: #ffffff;
+  font-weight: 500;
+  margin-left: 10px;
+}
+
+ .menu-link{
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+  color: #ffffff !important;
+  margin-left: 50px;
 }
